--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
 
             <h1 class="text-4xl md:text-5xl font-bold text-green-900 mb-2">
-                Sudhama Farm
+                SuDhama Farm
             </h1>
 
             <p class="text-2xl md:text-3xl font-light text-gray-700 mb-6">
@@ -68,7 +68,7 @@
 
         <footer class="absolute bottom-4 text-center w-full">
             <p class="text-sm text-gray-600">
-                © <span id="year"></span> Sudhamafarm.com - All Rights Reserved.
+                © <span id="year"></span> SuDhamafarm.com - All Rights Reserved.
             </p>
         </footer>
     </div>
