--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SuDhama: The Good Home</title>
-    <link rel="icon" href="https://i.imgur.com/uDb0N4A.jpeg" type="image/jpeg">
+    <link rel="icon" href="images/Favicon.png" type="image/jpeg">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,7 +48,7 @@
             width: 100%;
         }
         .hero-image {
-            background: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url('https://images.unsplash.com/photo-1600585152225-3589FE934ce8?q=80&w=1920&auto=format&fit=crop');
+            background: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2)), url('images/Farmhouse.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -89,7 +89,7 @@
     <header id="header" class="fixed top-0 left-0 right-0 z-50 transition-all duration-500">
         <nav class="container mx-auto px-6 md:px-10 py-3 flex justify-between items-center">
             <a href="#" class="block" data-page="home">
-                <img src="https://i.imgur.com/uDb0N4A.jpeg" alt="SuDhama Logo" class="h-14 w-auto">
+                <img src="images/Logo.png" alt="SuDhama Logo" class="h-14 w-auto">
             </a>
             <div class="hidden md:flex items-center space-x-10 text-sm font-medium tracking-wide">
                 <a href="#" class="nav-link active" data-page="home">Home</a>
