--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="container mx-auto px-6 md:px-10 grid grid-cols-1 md:grid-cols-3 gap-8">
                     <div class="group fade-in-up" style="transition-delay: 100ms;">
                         <div class="bg-white rounded-lg overflow-hidden shadow-lg transform group-hover:-translate-y-2 transition-transform duration-300">
-                            <img src="https://images.unsplash.com/photo-1620766165457-a877c9b99332?q=80&w=600&h=800&auto=format&fit=crop" alt="Angled front view with textured stonework." class="w-full h-80 object-cover">
+                            <img src="images/Farmhouse V1.jpg" alt="Angled front view with textured stonework." class="w-full h-80 object-cover">
                             <div class="p-8 text-center">
                                 <h3 class="text-2xl font-bold mb-2">The Farmhouse</h3>
                                 <p class="text-stone-600 mb-6">The heart of our property. A rustic, laterite home embracing simplicity.</p>
@@ -132,7 +132,7 @@
                     </div>
                     <div class="group fade-in-up" style="transition-delay: 200ms;">
                          <div class="bg-white rounded-lg overflow-hidden shadow-lg transform group-hover:-translate-y-2 transition-transform duration-300">
-                            <img src="https://images.unsplash.com/photo-1590502625992-3663b615b839?q=80&w=600&h=800&auto=format&fit=crop" alt="Drone shot over the 3-acre grove." class="w-full h-80 object-cover">
+                            <img src="images/Farm.jpg" alt="Drone shot over the 3-acre grove." class="w-full h-80 object-cover">
                             <div class="p-8 text-center">
                                 <h3 class="text-2xl font-bold mb-2">The Land</h3>
                                 <p class="text-stone-600 mb-6">A lush mix of coconut, arecanut, and fruit trees grown with organic love.</p>
@@ -142,7 +142,7 @@
                     </div>
                     <div class="group fade-in-up" style="transition-delay: 300ms;">
                          <div class="bg-white rounded-lg overflow-hidden shadow-lg transform group-hover:-translate-y-2 transition-transform duration-300">
-                            <img src="https://images.unsplash.com/photo-1594034893542-20a6a1a4555e?q=80&w=600&h=800&auto=format&fit=crop" alt="Close-up of a cow with natural backdrop." class="w-full h-80 object-cover">
+                            <img src="images/Cow.jpg" alt="Close-up of a cow with natural backdrop." class="w-full h-80 object-cover">
                             <div class="p-8 text-center">
                                 <h3 class="text-2xl font-bold mb-2">The Cows</h3>
                                 <p class="text-stone-600 mb-6">More than cattle—they’re family. Rescued, revered, and cared for.</p>
