--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     <footer class="bg-stone-800 text-stone-300 py-20">
         <div class="container mx-auto px-6 md:px-10 text-center">
             <div class="inline-block p-2 bg-stone-100 rounded-full mx-auto mb-4">
-                <a href="#" data-page="home"><img src="https://i.imgur.com/uDb0N4A.jpeg" alt="SuDhama Logo" class="h-16 w-auto"></a>
+                <a href="#" data-page="home"><img src="images/Logo.png" alt="SuDhama Logo" class="h-16 w-auto"></a>
             </div>
             <p class="text-stone-400">A Good Home. A Good Life.</p>
             <div class="mt-8 space-x-6 text-sm"><a href="#" class="hover:text-white transition" data-page="farmhouse">The Farmhouse</a><a href="#" class="hover:text-white transition" data-page="farm">Our Farm</a><a href="#" class="hover:text-white transition" data-page="cows">Our Cows</a><a href="#" class="hover:text-white transition" data-page="story">Our Story</a></div>
