--- a/index.html
+++ b/index.html
@@ -165,16 +165,7 @@
                         <h2 class="text-4xl text-stone-800">Architecture & Design</h2>
                         <p class="text-stone-600 leading-relaxed text-lg">Built with locally sourced Laterite stone, the farmhouse embodies zero-mile construction. Its design respects the local climate with natural cross-ventilation and traditional clay tiles, creating a space that breathes with the land.</p>
                     </div>
-                    <img src="https://images.unsplash.com/photo-1525909002-1515b5720388?q=80&w=800&h=600&auto=format&fit=crop" alt="Textured laterite stone wall" class="rounded-lg shadow-xl w-full h-full object-cover">
-                </div>
-                <div class="fade-in-up">
-                    <h2 class="text-4xl text-stone-800 text-center mb-12">A Visual Walkthrough</h2>
-                    <div id="farmhouse-gallery" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
-                        <img src="https://images.unsplash.com/photo-1616046229478-9901c5536a45?q=80&w=800&h=600&auto=format&fit=crop" alt="Cozy Bedroom with natural light" class="gallery-item rounded-lg shadow-md cursor-pointer hover:opacity-80 transition-opacity">
-                        <img src="https://images.unsplash.com/photo-1556911220-bff31c812dba?q=80&w=800&h=600&auto=format&fit=crop" alt="Modern Kitchen with brass utensils" class="gallery-item rounded-lg shadow-md cursor-pointer hover:opacity-80 transition-opacity">
-                        <img src="https://images.unsplash.com/photo-1582533342234-9925b0277b55?q=80&w=800&h=600&auto=format&fit=crop" alt="Bathroom with earth-toned minimalism" class="gallery-item rounded-lg shadow-md cursor-pointer hover:opacity-80 transition-opacity">
-                        <img src="https://images.unsplash.com/photo-1588421329369-89b91a271455?q=80&w=800&h=600&auto=format&fit=crop" alt="View from the veranda to the forest" class="gallery-item rounded-lg shadow-md cursor-pointer hover:opacity-80 transition-opacity">
-                    </div>
+                    <img src="images/latHome.jpg" alt="Textured laterite stone wall" class="rounded-lg shadow-xl w-full h-full object-cover">
                 </div>
             </div>
         </section>
@@ -189,10 +180,14 @@
                     <h2 class="text-4xl text-stone-800 text-center mb-12">Our Plantations</h2>
                     <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
                         <!-- Interactive hover cards for plants -->
-                        <div class="group relative rounded-lg overflow-hidden"><img src="https://images.unsplash.com/photo-1582998352412-1b13a10b4916?q=80&w=400&h=400&auto=format&fit=crop" class="w-full h-full object-cover"><div class="absolute inset-0 bg-black/40 flex items-center justify-center"><h4 class="text-white text-2xl font-bold">Mangoes</h4></div></div>
-                        <div class="group relative rounded-lg overflow-hidden"><img src="https://images.unsplash.com/photo-1550258987-190a2347bba7?q=80&w=400&h=400&auto=format&fit=crop" class="w-full h-full object-cover"><div class="absolute inset-0 bg-black/40 flex items-center justify-center"><h4 class="text-white text-2xl font-bold">Bananas</h4></div></div>
-                        <div class="group relative rounded-lg overflow-hidden"><img src="https://images.unsplash.com/photo-1553809831-674f856dfd84?q=80&w=400&h=400&auto=format&fit=crop" class="w-full h-full object-cover"><div class="absolute inset-0 bg-black/40 flex items-center justify-center"><h4 class="text-white text-2xl font-bold">Jackfruit</h4></div></div>
-                        <div class="group relative rounded-lg overflow-hidden"><img src="https://images.unsplash.com/photo-1625237934842-576a1427a853?q=80&w=400&h=400&auto=format&fit=crop" class="w-full h-full object-cover"><div class="absolute inset-0 bg-black/40 flex items-center justify-center"><h4 class="text-white text-2xl font-bold">Cocoa</h4></div></div>
+                        <div class="group relative rounded-lg overflow-hidden"><img src="images/Mango.png" class="w-full h-full object-cover"><div class="absolute inset-0 bg-black/40 flex items-center justify-center"><h4 class="text-white text-2xl font-bold">Mangoes</h4></div></div>
+                        <div class="group relative rounded-lg overflow-hidden"><img src="images/Banana.jpg" class="w-full h-full object-cover"><div class="absolute inset-0 bg-black/40 flex items-center justify-center"><h4 class="text-white text-2xl font-bold">Bananas</h4></div></div>
+                        <div class="group relative rounded-lg overflow-hidden"><img src="images/Jackfruit.png" class="w-full h-full object-cover"><div class="absolute inset-0 bg-black/40 flex items-center justify-center"><h4 class="text-white text-2xl font-bold">Jackfruit</h4></div></div>
+                        <div class="group relative rounded-lg overflow-hidden"><img src="images/Cocoa.jpg" class="w-full h-full object-cover"><div class="absolute inset-0 bg-black/40 flex items-center justify-center"><h4 class="text-white text-2xl font-bold">Cocoa</h4></div></div>
+                        <div class="group relative rounded-lg overflow-hidden"><img src="images/Jamun.png" class="w-full h-full object-cover"><div class="absolute inset-0 bg-black/40 flex items-center justify-center"><h4 class="text-white text-2xl font-bold">Jamun</h4></div></div>
+                        <div class="group relative rounded-lg overflow-hidden"><img src="images/Cashew.jpg" class="w-full h-full object-cover"><div class="absolute inset-0 bg-black/40 flex items-center justify-center"><h4 class="text-white text-2xl font-bold">Cashew</h4></div></div>
+                        <div class="group relative rounded-lg overflow-hidden"><img src="images/Sitafal.jpg" class="w-full h-full object-cover"><div class="absolute inset-0 bg-black/40 flex items-center justify-center"><h4 class="text-white text-2xl font-bold">Sita Phal</h4></div></div>
+                        <div class="group relative rounded-lg overflow-hidden"><img src="images/LakshmanPhal.jpg" class="w-full h-full object-cover"><div class="absolute inset-0 bg-black/40 flex items-center justify-center"><h4 class="text-white text-2xl font-bold">Lakshman Phal</h4></div></div>
                     </div>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-12 items-center fade-in-up">
