--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
                     <h2 class="text-4xl text-stone-800 text-center mb-12">Meet the Herd</h2>
                     <div class="relative carousel-container">
                         <div class="carousel-track">
-                            <div class="carousel-slide text-center"><img src="https://images.unsplash.com/photo-1618274738332-5d1bd6151978?q=80&w=800&h=600&auto=format&fit=crop" class="mx-auto rounded-lg shadow-xl"><h3 class="text-2xl mt-4">Gauri</h3><p>Rescued in 2021, now our gentle matriarch.</p></div>
-                            <div class="carousel-slide text-center"><img src="https://images.unsplash.com/photo-1599029199949-c17013c3290b?q=80&w=800&h=600&auto=format&fit=crop" class="mx-auto rounded-lg shadow-xl"><h3 class="text-2xl mt-4">Nandi</h3><p>A playful spirit who loves his daily porridge.</p></div>
+                            <div class="carousel-slide text-center"><img src="images/Gauri.jpg"><h3 class="text-2xl mt-4">Gauri</h3><p>Rescued in 2021, now our gentle matriarch.</p></div>
+                            <div class="carousel-slide text-center"><img src="images/Krishna.jpg" class="mx-auto rounded-lg shadow-xl"><h3 class="text-2xl mt-4">Krishna</h3><p>A playful spirit who loves his daily porridge.</p></div>
                         </div>
                         <button class="carousel-prev absolute top-1/2 left-0 transform -translate-y-1/2 bg-white/50 p-2 rounded-full">←</button>
                         <button class="carousel-next absolute top-1/2 right-0 transform -translate-y-1/2 bg-white/50 p-2 rounded-full">→</button>
